src/alto-ui/Datagrid/components/DatagridHeaderRow/DatagridHeaderRow.scss
@import '../../../scss/inc';

.DatagridHeaderRow {
  display: flex;
  flex: 1;
  flex-basis: auto;
}

.DatagridHeaderRow__group {
  display: flex;
  flex-direction: column;
}

.DatagridHeaderRow__group-title {
  flex-shrink: 0;
  height: 1.5rem;
  line-height: 1.5rem;
  overflow: hidden;
  border-bottom: 1px solid $coolgrey-20;
  font-weight: $font-weight-semibold;
  font-size: $font-size-small;
  white-space: nowrap;
  text-overflow: ellipsis;
  padding: 0 0.625rem;
  color: $coolgrey-60;
  text-align: left;
  background-color: $white;
  box-shadow: inset -1px 0 0 0 $coolgrey-20;

  .DatagridHeaderRow__group--last & {
    box-shadow: none;
  }

  &--empty {
    background: transparent;
  }
}

.DatagridHeaderRow__group-columns {
  display: flex;
  flex: 1;
  flex-basis: auto;
}

.DatagridHeaderRow__checkbox {
  background-color: $white;
  border-bottom: 1px solid $coolgrey-20;
  display: flex;
  align-items: center;
  font-size: $font-size-small;
  width: $height-datagrid-default;
  padding-left: 0.75rem;
  box-shadow: inset -1px 0 0 0 $coolgrey-20;

  .DatagridHeaderRow__group--last & {
    box-shadow: none;
  }
}

.DatagridHeaderRow__last-cell {
  border-left: 1px solid $coolgrey-20;
  min-width: 8rem;
  flex: 1;
}

